added hypothesis holder for gh-pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
 
     <!-- The code below is used for manually entered links  -->
 
-    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{ page.url }}">Annotate me</a>
+    <a class="sidebar-nav-item" href="https://via.hypothes.is/https://elotroalex.github.io{{ site.baseurl }}{{ page.url }}">Annotate me</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
